--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@babel/core": "^7.18.9",
+		"@babel/preset-env": "^7.18.9",
+		"babel-loader": "^8.2.5",
 		"css-loader": "^6.7.1",
 		"html-loader": "^4.1.0",
 		"html-webpack-plugin": "^5.5.0",
